# mess

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  publish.yaml  release.yaml  unittest.yaml
benchmarks/: plot_bench_results.ipynb  results_000.parquet  results_001.parquet  results_002.parquet  run_bench.py
docs/: _config.yml  references.bib
mess/: __init__.py  atomic_constants.py  basis.py  hamiltonian.py  integrals.py  integrals_pyscf.py  interop.py  mesh.py  orbital.py  plot.py  primitive.py  scf.py  shell.py  structure.py  types.py  zeropad_integrals.py
test/: conftest.py  test_autograd_integrals.py  test_benchmark.py  test_cart2sph.py  test_hamiltonian.py  test_integrals.py  test_interop.py  test_mesh.py  test_shell.py
