[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mess-jax"
authors = [{ name = "Hatem Helal", email = "hatem.helal@gmail.com" }]
description = "MESS: Modern Electronic Structure Simulations"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "equinox",
  # JAX 0.7.0 is known to be buggy with Equinox.
  # https://github.com/patrick-kidger/equinox/issues/1084
  "jax==0.6.2",
  "jaxtyping",
  "more-itertools",
  "optax",
  "optimistix",
  "pandas",
  "periodictable",
  "pyarrow",
  "pyscf==2.6.2",
  "py3Dmol",
  "basis_set_exchange",
  "sympy",
  "importlib-resources",
]
dynamic = ["version"]

[project.optional-dependencies]
gpu = ["jax[cuda12]"]
dev = [
  "jupyter-book",
  "tqdm",
  "ipywidgets",
  "pytest",
  "pytest-benchmark",
  "pytest-xdist[psutil]",
  "pre-commit",
  "ruff",
  "mdformat-gfm",
  "seaborn",
  "taskipy",
]

[project.urls]
Website = "https://github.com/hatemhelal/mess"
"Source Code" = "https://github.com/hatemhelal/mess"
"Bug Tracker" = "https://github.com/hatemhelal/mess/issues"
Documentation = "https://hatemhelal.github.io/mess/"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
fallback_version = "dev"

[tool.pytest.ini_options]
addopts = "-s -v --durations=10"
filterwarnings = [
  "error",
  'ignore:Since PySCF\-2\.3, B3LYP \(and B3P86\) are changed.*:UserWarning',
  'ignore:Function mol\.dumps drops attribute spin.*:UserWarning',
  'ignore:scatter inputs have incompatible types.*:FutureWarning'
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E741"]

[tool.taskipy.tasks]
test = {cmd = "pytest -n auto --dist loadfile --benchmark-disable", help = "Run unit tests. Uses xdist and disables benchmarking."}
bench = {cmd = "pytest --benchmark-only", help = "Collect benchmark metrics"}
doc = {cmd = "jupyter-book build docs", help = "Build the documentation"}
